# film-reviews

./: .gitignore  AGENTS.md  README.md  build.sh  opencode.json  pyproject.toml  render.yaml  requirements-production.txt  requirements.txt
app/: asgi.py  settings.py  urls.py
openspec/: config.yaml
openspec/changes/add-basic-views/: proposal.md  tasks.md
openspec/changes/add-htmx-live-search/: tasks.md
openspec/changes/archive/2026-07-15-add-basic-views/: design.md
openspec/changes/archive/2026-07-15-initialize-django-database/: proposal.md  tasks.md
openspec/changes/archive/2026-07-22-add-htmx-live-search/: design.md  proposal.md  tasks.md
openspec/changes/improve-interface-quality/: design.md  proposal.md  tasks.md
openspec/changes/initialize-django-database/: design.md  tasks.md
openspec/changes/prepare-project-deployment/: design.md  tasks.md
openspec/changes/support-forms-user-input/: proposal.md  tasks.md
openspec/specs/data-model/: spec.md
openspec/specs/deployment/: spec.md
openspec/specs/web-interface/: spec.md
reviews/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
reviews/static/reviews/: styles.css
reviews/templates/registration/: login.html  register.html
reviews/templates/reviews/: base.html  home.html  movie_detail.html  movie_list.html  review_form.html
tests/app/: test_settings.py
tests/reviews/: test_admin.py  test_forms.py  test_htmx.py  test_interface.py  test_models.py  test_services.py  test_views.py
(+16 files in other folders)
