[project]
name = "film-reviews"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "django>=4.2,<5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.0",
    "pytest-django>=4.8",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
addopts = "--cov=app --cov=reviews --cov-report=term-missing"
testpaths = ["tests"]
